Avoid cropping text by images
Thanks @davegomez!

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -253,7 +253,8 @@ footer .footer-wrapper{
 
 .post__content img {
     position: inherit;
-    width: 100%;
+    max-width: 100%;
+    width: 100vw;
 }
 
 .post__content .author {
